Christian Mardmuller	<chm@kdt.de>			10 Nov 1999-29 Feb 2000
Christoph Plattner	<Christoph.Plattner@dot.at>	31 Jan 2000-02 Feb 2000
David Murn		<scuffer@hups.apana.org.au>	11 Nov 1998-15 Nov 1999
Giles Russell						22 Nov 1999
Greg Haerr						14 Jul 1999-20 Jul 1999
Harry Kalogirou 	<HarKal@rainbow.cs.unipi.gr>	20 Jun 2001-22 Oct 2001
Mario Frasca						20 Jan 2000-14 Feb 2000
Paul Nasrat		<pnasrat@uk.now.com>		28 Aug 2001
Per Olofsson		<MagerValp@cling.gu.se> 	25 Feb 2000
Peter L Vachuska	<pvachusk@nconnect.net> 	13 Aug 2001
Riley Williams		<rhw@MemAlpha.cx>		16 Nov 1998-29 Oct 2001
Roman Festchook 	<roma@polesye.net>		27 Oct 2001
Simon Weijgers		<simon@weijgers.com>		16 Sep 1998-15 Nov 1999
Simon Wood						06 Jan 2000-12 Jan 2000
Thomas McWilliams	<tgm9999@yahoo.com>		27 Aug 1999-02 Apr 2001

-------------------------------------------------------------------------------

Mon Oct 29 13:12:49 GMT 2001	Riley Williams <rhw@MemAlpha.cx>

	* Completed contributors table from CHANGELOG entries.
	* Corrected mis-spelt email for Harry Kalogirou in CHANGELOG entry.
	* Spellchecked CHANGELOG using British English spellings throughout.
	* Updated TODO document to reflect targets for various releases.

Sat Oct 27 00:06:00 EEST 2001	Roman Festchook <roma@polesye.net>

	* Added the Russian FAQ to the Documentation.

Thu Oct 25 23:14:32 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* Updated elks/BUGS to match elks/BUGS.html
	* Updated elks/INSTALLATION to match elks/INSTALLATION.html

===============================================================================

Tue Oct 23 17:36:10 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* THIS IS ELKS RELEASE 0.0.88

	* Updated include/linuxmt/autoconf.h to match `make defconfig` results.

===============================================================================

Tue Oct 23 01:44:24 BST 2001	Riley Williams <rhw@MemAlpha.cx>

	* THIS IS ELKS RELEASE 0.0.88-pre1.

	* Brought Makefile-rules up to date.